fix: adjust css to prevent save path text overflow (#9)

--- a/src/app/components/sidebar/settings/settings.component.scss
+++ b/src/app/components/sidebar/settings/settings.component.scss
@@ -29,7 +29,7 @@
   }
 
   p {
-    overflow-wrap: break-word;
+    overflow-wrap: anywhere;
     margin: 0 7% 2vh;
   }
 }
